# aicalories

./: .gitignore  CLAUDE.md  README.md  SKILL.md  corrections.py  models.py  prompts.py  pyproject.toml  requirements.txt  run.py  telegram_bot.py  usda.py
calorie_estimator/: __init__.py  barcode.py  estimator.py  models.py  openfoodfacts.py  prompts.py  semantic.py  usda.py
data/: .gitignore  README.md  common_foods.json
scripts/: build_db.py  build_embeddings.py
tests/: test_openfoodfacts.py  test_parse_json.py  test_stage_3_retry.py
