[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calorie-estimator"
version = "0.1.0"
description = "Calorie and macro estimation toolkit: food photos, barcode scanning, Open Food Facts, and the USDA FoodData Central database."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pyzbar>=0.1.9",
    "pillow>=10.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]

[tool.setuptools]
packages = ["calorie_estimator"]
